--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,15 +1,15 @@
 {
   "development": {
-    "username": process.env.POST_USER_NAME,
+    "username": "adc",
     "password": null,
-    "database": "database_development",
+    "database": "makersbnb_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": process.env.POST_USER_NAME,
+    "username": "adc",
     "password": null,
-    "database": "database_test",
+    "database": "makersbnb_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
