--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "makersbnb",
   "version": "1.0.0",
-  "description": "Description ----------- Makersbnb allows you to book rooms to stay and advertise your own rooms to others.",
+  "description": "Makersbnb- share rooms to let for short breaks.",
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon ./bin/www",
@@ -21,6 +21,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "handlebars": "^4.0.8",
+    "hbs": "*",
     "morgan": "^1.8.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
