--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,13 +1,13 @@
 {
   "development": {
-    "username": "jonathanelliot",
+    "username": "adc",
     "password": null,
     "database": "makersbnb_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "jonathanelliot",
+    "username": "adc",
     "password": null,
     "database": "makersbnb_test",
     "host": "127.0.0.1",
