--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "simon",
+    "username": "adc",
     "password": null,
     "database": "makersbnb_development",
     "host": "127.0.0.1",
